# IntershopDocRAG

./: .gitignore  Intershop_sitemap.xml  README.md  config.yaml  pyproject.toml
.streamlit/: config.toml
_bmad-output/brainstorming/: brainstorming-session-2026-03-28-1228.md
_bmad-output/implementation-artifacts/: 1-1-initialize-python-project-with-astral-uv.md  1-2-scaffold-project-directory-structure-and-configuration.md  2-1-headless-microsoft-entra-id-authentication.md  2-2-sitemap-parsing-and-url-queue-generation.md  2-3-state-checkpoint-manager.md  2-4-async-http-fetcher-with-rate-limiting-and-retries.md  2-5-html-to-markdown-conversion-with-metadata.md  2-6-cookie-expiry-detection-and-auto-reauthentication.md  2-7-cli-pipeline-orchestrator-with-real-time-progress.md  3-1-document-loading-and-text-splitting.md  3-2-vector-embedding-and-chromadb-storage.md  3-3-ingestion-cli-orchestrator.md  4-1-vector-retrieval-and-context-gathering.md  4-2-grounded-answer-generation-lcel-chain.md  4-3-conversational-memory-buffer.md  4-4-basic-streamlit-chat-ui.md  4-5-raw-citation-display.md  5-1-theming-and-typography-adjustments.md  5-2-enhanced-citation-footer-component.md  5-3-empty-state-and-conversation-reset.md  5-4-loading-feedback-and-error-recovery-states.md  sprint-status.yaml  (+1 more)
_bmad/bmm/: config.yaml
ingestion/: embedder.py  loader.py  main.py  splitter.py
scraper/: auth.py  config.py  fetcher.py  main.py  parser.py  sitemap.py  state.py
tests/: __init__.py  conftest.py  test_project_setup.py  test_project_structure.py
ui/: app.py  chain.py  citations.py
(+21 files in other folders)
